# tcc-gpu

./: .gitignore
cpp/: CMakeLists.txt
cpp/include/: mst.hpp  shortest_paths.hpp
cpp/src/: baseline_spmst.cpp  main.cu  mst.cpp  shortest_paths.cpp
docs/: dataset.md  fundamentos.md  primeiro_experimento.md  solution_format.md
experiments/results/: type1_small_baseline.csv
py/: pyproject.toml
py/src/exp/: bks_type1_small.csv  metrics.py  run_alns_minimal.py  run_alns_sa.py  runner.py  test_destroy_ops.py  test_repair_r1.py  test_repair_r3.py
py/src/tcc/: __init__.py  instance.py  solution.py  summarize.py  tsplib_loader.py  verify.py
py/src/tcc/alns/: __init__.py  alns_sa.py  iterlog.py  minimal.py  operators_destroy.py  operators_repair.py  operators_repair_steiner.py  partial_state.py
py/tools/: check_solution.py
